--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest 
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.obu.andrew"
-    android:versionCode="1"
-    android:versionName="1.0" >
+    package="com.andrew.obu"
+    android:versionCode="3"
+    android:versionName="3.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -18,67 +18,67 @@
         
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Bannerdisclaimer" />
+            android:name="com.andrew.obu.Bannerdisclaimer" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Applywebview" />
+            android:name="com.andrew.obu.Applywebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Infowebview" />
+            android:name="com.andrew.obu.Infowebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Visitwebview" />
+            android:name="com.andrew.obu.Visitwebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".CurrentStudents" />
+            android:name="com.andrew.obu.CurrentStudents" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Majors" />
+            android:name="com.andrew.obu.Majors" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".ProspectiveStudents" />
+            android:name="com.andrew.obu.ProspectiveStudents" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".About" />
+            android:name="com.andrew.obu.About" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Contact" />
+            android:name="com.andrew.obu.Contact" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Newswebview" />
+            android:name="com.andrew.obu.Newswebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Athleticswebview" />
+            android:name="com.andrew.obu.Athleticswebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Staffwebview" />
+            android:name="com.andrew.obu.Staffwebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Jupiterwebview" />
+            android:name="com.andrew.obu.Jupiterwebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Moodlewebview" />
+            android:name="com.andrew.obu.Moodlewebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Emailwebview" />
+            android:name="com.andrew.obu.Emailwebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Bannerwebview" />
+            android:name="com.andrew.obu.Bannerwebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Calendar" />
+            android:name="com.andrew.obu.Calendar" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Chapelswebview" />
+            android:name="com.andrew.obu.Chapelswebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Academicswebview" />
+            android:name="com.andrew.obu.Academicswebview" />
         <activity 
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name=".Finalswebactivity" />
+            android:name="com.andrew.obu.Finalswebactivity" />
         <activity
             android:theme="@android:style/Theme.NoTitleBar" 
-            android:name="com.obu.andrew.MainActivity"
+            android:name="com.andrew.obu.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
